--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
         <a href="https://github.com/LeiramLF" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-github"></i>
         </a>
-        <a href="https://www.linkedin.com/in/mariel-lagunas-flores-9389a6205/" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.linkedin.com/in/mariel-lf/" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-linkedin"></i>
         </a>
         <a href="https://www.instagram.com/leiramlf/" target="_blank" rel="noopener noreferrer">
